--- a/index.html
+++ b/index.html
@@ -14,68 +14,5 @@
 		<script src="./script/script.js" defer></script>
 		<title>Rock Paper Scissors</title>
 	</head>
-	<body>
-		<!-- <div class="main">
-			<div class="player-life--container">
-				<h2>Your lives:</h2>
-				<div class="player-life">
-					<div class="life-circle life1">
-						<img src="./assets/skull2.svg" />
-					</div>
-					<div class="life-circle life2">
-						<img src="./assets/rose.svg" />
-					</div>
-					<div class="life-circle life3">
-						<img src="./assets/bird.svg" />
-					</div>
-				</div>
-			</div>
-
-			<div class="suspicious-man">
-				<h2>Suspicious Man</h2>
-				<div class="img-container">
-					<img src="./assets/suspiciousman.jpg" />
-				</div>
-			</div>
-			<div class="suspicious-card--container">
-				<div class="card">
-					<div class="card-paper"></div>
-					<h3 class="title-paper">Paper</h3>
-				</div>
-			</div>
-			<div class="player-selected">
-				<div class="card">
-					<div class="card-rock"></div>
-					<h3 class="title-rock">Rock</h3>
-				</div>
-			</div>
-			<div class="player-cards">
-				<div class="card1">
-					<div class="card">
-						<div class="card-rock"></div>
-						<h3 class="title-rock">Rock</h3>
-					</div>
-				</div>
-				<div class="card2">
-					<div class="card">
-						<div class="card-paper"></div>
-						<h3 class="title-paper">Paper</h3>
-					</div>
-				</div>
-				<div class="card3">
-					<div class="card">
-						<div class="card-scissors"></div>
-						<h3 class="title-scissors">Scissors</h3>
-					</div>
-				</div>
-			</div>
-			<div class="btn-round--container">
-				<button class="btn-round">Start Round</button>
-			</div>
-			<div class="timer-container">
-				<h1>3</h1>
-			</div>
-		</div>
-		<h2 class="player">You</h2> -->
-	</body>
+	<body></body>
 </html>
